# tia-portal-automation-tool

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml  requirements.txt  tia-portal-automation-tool.spec
core/: core.py
docs/: demo.md
modules/: DeviceItems.py  Devices.py  Networks.py  Portals.py  api.py  config_schema.py  portal.py  structs.py  xml_builder.py
notebooks/: Export Program Block Into XML.ipynb  Import Program Block XML.ipynb  Insert PlcBlock With Nested Network Sources.ipynb
schemas/: DeviceItems.py  Devices.py  Networks.py  configuration.py
src/core/: core.py  logs.py
src/modules/: BlocksDBInstances.py  BlocksData.py  BlocksDatabase.py  BlocksFB.py  BlocksFC.py  BlocksGlobalDB.py  BlocksOB.py  DeviceItems.py  Devices.py  FunctionBlocks.py  Functions.py  Libraries.py  Networks.py  OrganizationBlocks.py  PlcBlocks.py  PlcDataTypes.py  PlcTags.py  Portals.py  ProgramBlocks.py  Projects.py  XML.py  logger.py
src/schemas/: BlocksDBInstances.py  BlocksData.py  BlocksFB.py  BlocksFC.py  BlocksGlobalDB.py  BlocksOB.py  Devices.py  Libraries.py  NetworkSources.py  Networks.py  PlcDataTypes.py  PlcFB.py  PlcTags.py  ProgramBlocks.py  XML.py  configuration.py
src/tests/: test_core.py  test_modules_devices.py
tests/: test_core.py  test_modules_devices.py  test_modules_program_blocks.py  test_schemas_configuration.py  test_xml_program_blocks.py
tests/configs/: all.json  devices_with_networks.json  function_blocks.json  functions.json  global_dbs.json  multiple_devices.json  nested_network_sources.json  (+8 more)
ui/: app_window.slint  graphical.py
(+8 files in other folders)
